Salesforce/main/default/main/default/objects/Flujo_Doc_tmp__c/fields/ActualizadoEnOpLineItem__c.field-meta.xml
<CustomField>
    <fullName>ActualizadoEnOpLineItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ActualizadoEnOpLineItem</label>
    <type>Checkbox</type>
</CustomField>