Salesforce/main/default/main/default/objects/Flujo_Doc_tmp__c/fields/FKART__c.field-meta.xml
<CustomField>
    <fullName>FKART__c</fullName>
    <label>FKART</label>
    <length>4</length>
    <type>Text</type>
</CustomField>