Salesforce/main/default/main/default/objects/Flujo_Doc_tmp__c/fields/FKIMG__c.field-meta.xml
<CustomField>
    <fullName>FKIMG__c</fullName>
    <label>FKIMG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>