Salesforce/main/default/main/default/objects/Flujo_Doc_tmp__c/fields/NETWR__c.field-meta.xml
<CustomField>
    <fullName>NETWR__c</fullName>
    <label>NETWR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>