Salesforce/main/default/main/default/objects/Flujo_Doc_tmp__c/fields/SFAKN__c.field-meta.xml
<CustomField>
    <fullName>SFAKN__c</fullName>
    <label>SFAKN</label>
    <length>18</length>
    <type>Text</type>
</CustomField>