Salesforce/main/default/main/default/objects/Flujo_Doc_tmp__c/fields/VBELV__c.field-meta.xml
<CustomField>
    <fullName>VBELV__c</fullName>
    <label>VBELV</label>
    <length>18</length>
    <type>Text</type>
</CustomField>