Salesforce/main/default/main/default/objects/Flujo_Doc_tmp__c/fields/VBTYP__c.field-meta.xml
<CustomField>
    <fullName>VBTYP__c</fullName>
    <label>VBTYP</label>
    <length>2</length>
    <type>Text</type>
</CustomField>