Salesforce/main/default/main/default/objects/Flujo_Doc_tmp__c/fields/VRKME__c.field-meta.xml
<CustomField>
    <fullName>VRKME__c</fullName>
    <label>VRKME</label>
    <length>3</length>
    <type>Text</type>
</CustomField>