Salesforce/main/default/main/default/objects/Flujo_Doc_tmp__c/fields/WAERK__c.field-meta.xml
<CustomField>
    <fullName>WAERK__c</fullName>
    <label>WAERK</label>
    <length>3</length>
    <type>Text</type>
</CustomField>