Salesforce/main/default/main/default/objects/Flujo_Doc_tmp__c/fields/ZZPOSSF__c.field-meta.xml
<CustomField>
    <fullName>ZZPOSSF__c</fullName>
    <label>ZZPOSSF</label>
    <length>18</length>
    <type>Text</type>
</CustomField>